# the-energy-detective-py

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/tedpy/: __init__.py  __main__.py  dataclasses.py  formatting.py  ted.py  ted5000.py  ted6000.py
tests/: test_datatypes.py  test_ted.py
tests/fixtures/ted5000/: data.xml  liveData.xml  systemSettings.xml
tests/fixtures/ted6000/: dashData.xml  dashData_mtu1.xml  dashData_mtu2.xml  dashData_mtu3.xml  spyderData.xml  systemOverview.xml  systemSettings.xml
