[tool.poetry]
name = "tedpy"
version = "1.0.2"
description = "Unofficial library for reading from The Energy Detective power meters"
authors = ["rianadon"]
repository = "https://github.com/rianadon/the-energy-detective-py"
documentation = "https://github.com/rianadon/the-energy-detective-py#readme"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.20.0"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
respx = "^0.18.2"
pytest-asyncio = "^0.16.0"
pre-commit = "^2.15.0"
isort = "^5.9.3"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
